--- a/ecommerce-front/public/index.html
+++ b/ecommerce-front/public/index.html
@@ -9,6 +9,9 @@
         background-attachment: fixed;
         background-size: cover;
       }
+      body::-webkit-scrollbar {
+        display: none;
+      }
     </style>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
